--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tank-monitoring-system",
   "private": true,
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Real-time tank monitoring system with CSV file import and serial communication",
   "author": "Tank Monitor Team",
   "type": "module",
@@ -75,12 +75,17 @@
       {
         "from": "server",
         "to": "server",
-        "filter": ["**/*", "!node_modules/**/*"]
+        "filter": [
+          "**/*",
+          "!node_modules/**/*"
+        ]
       },
       {
         "from": "dist",
         "to": "dist",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       },
       {
         "from": "node_modules",
