--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "1.1.1",
   "description": "Real-time tank monitoring system with CSV file import and serial communication",
-  "author": "Tank Monitor Team",
+  "author": "Martin (shipdocs)",
+  "license": "SEE LICENSE IN LICENSE",
   "type": "module",
   "main": "electron/main.js",
   "homepage": "./",
