--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "tank-monitoring-system",
   "private": true,
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Real-time tank monitoring system with CSV file import and serial communication",
   "author": "Martin (shipdocs)",
   "license": "SEE LICENSE IN LICENSE",
-  "keywords": ["tank-monitoring", "maritime", "electron", "real-time", "csv", "serial-port"],
+  "keywords": [
+    "tank-monitoring",
+    "maritime",
+    "electron",
+    "real-time",
+    "csv",
+    "serial-port"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/shipdocs/tank-monitoring-system.git"
