--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
+    "electron-updater": "^6.6.2",
     "express": "^4.18.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -80,6 +81,11 @@
     "productName": "Tank Monitoring System",
     "directories": {
       "output": "dist-electron"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "shipdocs",
+      "repo": "tank-monitoring-system"
     },
     "files": [
       "dist/**/*",
