fix: exclude node_modules from Electron build to prevent installer freeze
- Removed node_modules bundling from extraResources
- Excluded node_modules from files array
- Server code already handles finding modules in different locations
- Reduces installer size by ~85MB (185MB -> 100MB)
- Fixes 100% CPU usage and installer freeze on Windows
- Installer now only extracts essential app files instead of thousands of npm packages

--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
       "dist/**/*",
       "electron/**/*",
       "server/**/*",
-      "node_modules/**/*"
+      "!node_modules/**/*"
     ],
     "extraResources": [
       {
@@ -102,25 +102,6 @@
         "to": "dist",
         "filter": [
           "**/*"
-        ]
-      },
-      {
-        "from": "node_modules",
-        "to": "server/node_modules",
-        "filter": [
-          "**/*",
-          "!electron/**/*",
-          "!electron-builder/**/*",
-          "!@electron/**/*",
-          "!vite/**/*",
-          "!@vitejs/**/*",
-          "!tailwindcss/**/*",
-          "!autoprefixer/**/*",
-          "!postcss/**/*",
-          "!typescript/**/*",
-          "!@types/**/*",
-          "!nodemon/**/*",
-          "!electron-reload/**/*"
         ]
       }
     ],
