--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,11 @@ server/config.json
 
 # Keep sample data for testing
 !sample-data/
+
+# Ignore built executables and installers
+*.exe
+*.dmg
+*.AppImage
+*.deb
+*.rpm
+*.msi
