🎉 Fix vertical format parsing and tank count limits
Major fixes implemented:
- ✅ Fixed vertical format parsing in integrated server
- ✅ Added proper tank count limits (12 tanks max)
- ✅ Fixed settings page data structure compatibility
- ✅ Resolved password form DOM warnings
- ✅ Added Windows build support with Wine testing
- ✅ Fixed build scripts for all platforms
- ✅ Improved error handling and logging

Tank data now correctly parses:
- 4 lines per tank record (vertical format)
- Proper line mapping (level, temperature, ignore, ignore)
- Exactly 12 tanks generated as configured
- Real data from ExportReady.txt file

Windows version tested successfully with Wine!

--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,27 @@
 {
-  "type": "module",
   "name": "tank-monitoring-server",
   "version": "1.0.0",
   "description": "Tank monitoring system server",
-  "main": "index.js",
+  "main": "server-standalone.js",
+  "type": "module",
   "engines": {
     "node": ">=16.0.0"
-  }
+  },
+  "pkg": {
+    "scripts": [
+      "index.js",
+      "fileMonitor.js", 
+      "fileParser.js"
+    ],
+    "assets": [
+      "package.json"
+    ],
+    "targets": [
+      "node18-linux-x64",
+      "node18-win-x64",
+      "node18-macos-x64"
+    ],
+    "outputPath": "../dist-server-bin"
+  },
+  "bin": "server-standalone.js"
 }
