--- a/package.json
+++ b/package.json
@@ -64,11 +64,13 @@
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "electron-reload": "^2.0.0-alpha.1",
+    "esbuild": "^0.25.5",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "nodemon": "^3.0.2",
+    "pkg": "^5.8.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
@@ -83,20 +85,16 @@
       "output": "dist-electron"
     },
     "files": [
-      "!node_modules/**/*",
       "dist/**/*",
       "electron/**/*",
-      "server/**/*"
+      "server/**/*",
+      "node_modules/electron-updater/**/*",
+      "!**/test/**",
+      "!**/tests/**",
+      "!**/*.map"
     ],
+    "includeSubNodeModules": true,
     "extraResources": [
-      {
-        "from": "server",
-        "to": "server",
-        "filter": [
-          "**/*",
-          "!node_modules/**/*"
-        ]
-      },
       {
         "from": "dist",
         "to": "dist",
