--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tank-monitoring-system",
   "private": true,
-  "version": "1.0.1",
+  "version": "1.0.2-beta.1",
   "description": "Real-time tank monitoring system with CSV file import and serial communication",
   "author": "Martin (shipdocs)",
   "license": "SEE LICENSE IN LICENSE",
@@ -37,6 +37,8 @@
     "electron:dist": "npm run build && electron-builder --publish=never",
     "build:all": "node build-all-platforms.js",
     "release": "node scripts/release.js",
+    "test:autoupdate": "node scripts/test-autoupdate.js",
+    "test:consolidated": "node scripts/test-consolidated-server.js",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
@@ -118,11 +120,15 @@
           ]
         }
       ],
-      "icon": "electron/icon.ico"
+      "icon": "electron/icon.ico",
+      "signingHashAlgorithms": ["sha256"],
+      "timeStampServer": "http://timestamp.digicert.com"
     },
     "mac": {
       "target": "dmg",
-      "icon": "electron/icon.icns"
+      "icon": "electron/icon.icns",
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false
     },
     "linux": {
       "target": "AppImage",
@@ -133,6 +139,11 @@
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "shipdocs",
+      "repo": "tank-monitoring-system"
     }
   }
 }
