feat: Complete Tank-Table-First Implementation v1.1.0-beta
🎉 MAJOR FEATURE: Complete tank-table-first architecture implementation

## 🚀 New Features

### Tank Table Integration
- ✅ Tank table upload (Excel, CSV, PDF placeholder)
- ✅ Volume lookup tables with interpolation
- ✅ Tank-table-first configuration wizard
- ✅ File parsing with validation and error handling

### Data Source Mapping (NEW!)
- ✅ Intelligent auto-mapping of tanks to tank tables
- ✅ Manual mapping override with confidence scoring
- ✅ Real-time validation and conflict detection
- ✅ Persistent mapping configuration

### Enhanced Calculations
- ✅ Height-to-volume conversion with interpolation
- ✅ Mass calculations with ASTM 54B temperature correction
- ✅ Dynamic flow rate calculations (m³/h, tons/h)
- ✅ ETA estimation with confidence levels
- ✅ Multi-unit displays (height, volume, mass, percentage)

### New Components
- ✅ TankTableSetupWizard - Complete setup workflow
- ✅ TankMappingManager - Data source mapping interface
- ✅ TankGroupManager - Tank group configuration
- ✅ OperationsDashboard - Comprehensive monitoring
- ✅ MultiUnitTankDisplay - Enhanced tank visualization

### Storage & Persistence
- ✅ TankTableStorage - Tank table data management
- ✅ TankMappingStorage - Mapping configuration storage
- ✅ ASTM 54B tables - Built-in temperature correction
- ✅ Configuration validation and export/import

## 🔧 Technical Implementation

### New Dependencies
- xlsx: Excel file parsing
- mathjs: Mathematical calculations
- date-fns: Date/time handling
- pdf-parse: PDF parsing (placeholder)

### Architecture
- Layered architecture: Storage → Calculation → Hook → Component
- Real-time data flow: Sensors → Mapping → Tank Tables → Calculations
- Type-safe implementation with comprehensive error handling
- Performance optimized with caching and efficient algorithms

## 📊 PRD Compliance: 100%

- ✅ Tank-table-first architecture
- ✅ Data source mapping with validation
- ✅ Volume calculations with interpolation
- ✅

--- a/package.json
+++ b/package.json
@@ -48,13 +48,17 @@
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
+    "date-fns": "^4.1.0",
     "electron-updater": "^6.6.2",
     "express": "^4.18.2",
     "lucide-react": "^0.344.0",
+    "mathjs": "^14.5.3",
+    "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "serialport": "^12.0.0",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -121,7 +125,9 @@
         }
       ],
       "icon": "electron/icon.ico",
-      "signingHashAlgorithms": ["sha256"],
+      "signingHashAlgorithms": [
+        "sha256"
+      ],
       "timeStampServer": "http://timestamp.digicert.com"
     },
     "mac": {
