--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "express-rate-limit": "^7.5.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "playwright": "^1.53.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "serialport": "^12.0.0",
