--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tank-monitoring-system",
   "private": true,
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Real-time tank monitoring system with CSV file import and serial communication",
   "author": "Martin (shipdocs)",
   "license": "SEE LICENSE IN LICENSE",
@@ -49,6 +49,7 @@
     "electron-updater": "^6.6.2",
     "express": "^4.18.2",
     "lucide-react": "^0.344.0",
+    "playwright": "^1.54.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "serialport": "^12.0.0",
