chore: Clean up development files and add .gitignore rules
🧹 Cleanup:
- Removed 80+ development test files and screenshots
- Added comprehensive .gitignore rules for development files
- Cleaned repository for production release

📁 Files Removed:
- test-*.js and debug-*.js scripts
- test-*.png and debug-*.png screenshots
- mockup-*.html design files
- Various development artifacts

🔧 .gitignore Updates:
- Added patterns for test files and screenshots
- Excluded development mockups and debug files
- Maintained clean production codebase

✅ Repository now clean and ready for v1.2.1 release

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,33 @@ server/config.json
 *.deb
 *.rpm
 *.msi
+
+# Development and testing files
+test-*.js
+test-*.png
+*-test.js
+*-test.png
+debug-*.js
+debug-*.png
+mockup-*.html
+comprehensive-test.js
+complete-product-test*
+console-errors-test*
+create-test-product.js
+electron-check-*.png
+electron-console-*.png
+fixed-*.png
+full-implementation-test.png
+liters-display-test.png
+metric-tons-debug.png
+products-gui-*.png
+real-volumes-test.png
+sidebar-test-*.png
+simple-*.png
+simplified-config-test.png
+tank-*.png
+totals-dashboard-test.png
+unified-config-test.png
+v1.1.0-verification.png
+view-mode-test.png
+volume-*.png
