feat: Stable-only auto-updates - Skip RC/beta/testing versions
🔒 Auto-Update Security Enhancement:
- Added isStableVersion() function to filter pre-release versions
- Auto-updates only enabled for stable releases (1.2.3)
- RC/beta/alpha/testing versions (1.2.3-rc1) are skipped
- Any version with dash (-) is considered pre-release

🛡️ Maritime Safety Features:
- Ships only receive tested, stable releases
- No accidental RC/beta installations on vessels
- Professional deployment suitable for commercial operations
- Manual updates still possible for testing versions

🔧 Implementation Details:
- Modified update-available handler to check version stability
- Enhanced update-downloaded handler with double-checking
- Startup auto-update respects current version stability
- Manual update check shows version policy information
- Electron-builder configured for stable release publishing

✅ Version Examples:
- v1.2.3 → Auto-update enabled ✅
- v1.2.4-rc1 → Auto-update disabled ❌
- v1.2.4-beta → Auto-update disabled ❌
- v1.2.4-test → Auto-update disabled ❌
- v1.2.4 → Auto-update enabled ✅

Ready for maritime deployment with enhanced update security!

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "electron": "electron .",
     "electron:dev": "concurrently \"npm run build\" \"wait-on http://localhost:3001 && electron .\"",
     "electron:pack": "npm run build && electron-builder",
-    "electron:dist": "npm run build && electron-builder --publish=never",
+    "electron:dist": "npm run build && electron-builder --publish=onTagOrDraft",
     "build:all": "node build-all-platforms.js",
     "release": "node scripts/release.js",
     "postinstall": "electron-builder install-app-deps"
@@ -139,7 +139,8 @@
       "provider": "github",
       "owner": "shipdocs",
       "repo": "tank-monitoring-system",
-      "releaseType": "release"
+      "releaseType": "release",
+      "publishAutoUpdate": true
     }
   }
 }
