--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       run: npm run build
 
     - name: Test Electron build
-      run: npm run electron:pack
+      run: npm run build && npx electron-builder --publish=never
       env:
         CSC_IDENTITY_AUTO_DISCOVERY: ${{ matrix.os == 'macos-latest' && 'false' || '' }}
 
@@ -64,4 +64,6 @@ jobs:
       run: npm run build
 
     - name: Build Electron app
-      run: npm run electron:pack
+      run: npm run electron:dist
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
