--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "dev:frontend": "vite",
     "dev:backend": "nodemon server/index.js",
     "build": "vite build",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
     "lint": "eslint .",
     "preview": "vite preview",
     "start:server": "node server/index.js",
@@ -70,6 +73,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "jsdom": "^26.1.0",
     "nodemon": "^3.0.2",
     "pkg": "^5.8.1",
     "postcss": "^8.4.35",
